Fix crash when mouse moves from <summary> element to parent <details> element. https://bugs.webkit.org/show_bug.cgi?id=66210

Reviewed by Dimitri Glazkov.

This is a regression caused by r92922, which wrongly assumes that
a shadow host always has a shadow root as an immediate child in
ancestors chain. This assumption does not apply to <details>
element. <details> element is implemented as a shadow host, but
may have a <summary> element as an immediate child element in
ancestors chain.

Source/WebCore:

Test: fast/dom/shadow/details-summary-mouseover.html

* dom/EventDispatcher.cpp:
(WebCore::EventDispatcher::adjustToShadowBoundaries):

LayoutTests:

* fast/dom/shadow/details-summary-mouseover-expected.txt: Added.
* fast/dom/shadow/details-summary-mouseover.html: Added.

Canonical link: https://commits.webkit.org/82097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93079 268f45cc-cd09-0410-ab3c-d52691b4dbfc